--- a/Lab3 - Singing A Song.html
+++ b/Lab3 - Singing A Song.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Lab 2:Avocado</title>
+<title>Lab 2: Singing A Song</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -3028,7 +3028,7 @@ vertical-align: -.125em;
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Lab 2:Avocado</h1>
+<h1 class="title">Lab 2: Singing A Song</h1>
 </div>
 
 
